# beatmap-parser

./: .gitignore  Cargo.toml  README.md
resources/test/: README.md
src/: difficulty.rs  info.rs  lib.rs  structures.rs
