[package]
name = "beatmap-parser"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"

[dependencies]
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
lewton = { version = "0.9", optional = true }
reqwest = { version = "0.9", optional = true }
tempfile = { version = "3", optional = true }
zip = { version = "0.5", optional = true }

[features]
default = []
beatsaver = [ "reqwest", "tempfile", "zip" ]
audio = [ "lewton" ]