[package]
name = "beatmap_parser"
version = "0.1.2"
authors = [ "Raphaël Thériault <raphael_theriault@outlook.com>" ]
edition = "2018"
license = "MIT"
description = "Parse beatmap information, the fast way."
repository = "https://github.com/beat-boards/beatmap-parser"
keywords = [
    "beatsaber",
    "beatmap",
    "parser",
    "saber",
    "map",
]
categories = [ "games", "parsing" ]

[dependencies]
semver = { version = "0.9", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_repr = "0.1"
ogg_metadata = { version = "0.4", optional = true }
reqwest = { version = "0.9", optional = true }
tempfile = { version = "3", optional = true }
zip = { version = "0.5", optional = true }

[features]
default = []
beatsaver = [
    "reqwest",
    "tempfile",
    "zip",
]
audio = [ "ogg_metadata" ]

[package.metadata.docs.rs]
features = [ "beatsaver", "audio" ]
no-default-features = true